kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__smoke_test_parsing_expr_1.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(\"\\\"1\\\"\\n\")"
---
Node {
    node: StringLit(
        StringLit {
            is_long_string: false,
            raw_value: "\"1\"",
            value: "1",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}

